update fix overlap email input

--- a/src/styles/component/atomic/input/_input.scss
+++ b/src/styles/component/atomic/input/_input.scss
@@ -97,6 +97,12 @@ $input-on-background: background-color(dark-sky-blue);
       }
     }
 
+    &.has-endAdornment {
+      input {
+        padding-right: 115px !important;
+      }
+    }
+
     textarea {
       resize: none;
       overflow: hidden;
